--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Del Dicho al Hecho
+name: Del dicho al hecho 21 mayo de 2014
 author: Fundación Ciudadano Inteligente
 url: http://21m14.deldichoalhecho.cl
 #url: http://localhost:4000
